@@ -71,6 +71,10 @@ namespace Orthanc
 
     static void AddTagsForModule(std::set<DicomTag>& target,
                                  DicomModule module);
+
+#if ORTHANC_BUILDING_FRAMEWORK_LIBRARY == 1
+    ORTHANC_PUBLIC friend std::ostream& operator<< (std::ostream& o, const DicomTag& tag);
+#endif
   };
 
   // Aliases for the most useful tags
